# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  29 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
	Moved the autoclean section under the --pretend check so it doesn't flip
	out when running '-f'. Preliminary support for binary-only methods.
	--usepkgonly (implies --usepkg) to force errors is binaries don't exist.

  27 Oct 2002; Daniel Robbins <drobbins@gentoo.org> new*: changed "&&" to "||"
  to provide even better protection against mis-use of these commands.

*portage-2.0.43 (27 Oct 2002): Bug fix release

  27 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  AUTOCLEAN="yes" on by default. Added in a clean phase after the merge
  phase so clashing library versions do not remain installed when ldconfig
  is run. This should close up the symlinks-being-removed bugs.
	
  27 Oct 2002; Nicholas Jones <carpaski@gentoo.org> cnf/*:
  Miscelaneous typo fixes. Added PORTDIR_OVERLAY description in make.conf.

  26 Oct 2002; J Robert Ray <jrray@gentoo.org> portage.py:
  Don't act like the download failed if after successfully downloading
  a file its size doesn't match the file size in the digest.  Treat
  this as a mismatched digest condition instead.

  26 Oct 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
  Reversed the defaults on env_update() so it does a full ldconfig instead
  of a non-symlink ldconfig. Fixed the typo in the 'invalid conf' notices.

*portage-2.0.42 (24 Oct 2002): Bug fix release

  24 Oct 2002; Nicholas Jones <carpaski@gentoo.org> make.defaults.5:
  Removed this file. It is horribly out of date and completely
  wrong to boot. Users shouldn't be modifying the 3 lines in this file
  anyway. They are obvious if you understand conf and defaults.

  24 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  Added missing return statements to select_dep() that caused unmet packages