@@ -1,10 +1,19 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  03 Nov 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
+	eclass() function uses a caching and cPickle storing method to determine
+	currency of eclass-derived depcache entries. All previous methods are
+	already removed. eclass_save() is called via store() now. Stripped some
+	cruft from aux_get(). Error message touchups.
+
+  03 Nov 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
+	A couple message touchups.
+
   29 Oct 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
-	Moved the autoclean section under the --pretend check so it doesn't flip
-	out when running '-f'. Preliminary support for binary-only methods.
-	--usepkgonly (implies --usepkg) to force errors is binaries don't exist.
+  Moved the autoclean section under the --pretend check so it doesn't flip
+  out when running '-f'. Preliminary support for binary-only methods.
+  --usepkgonly (implies --usepkg) to force errors is binaries don't exist.
 
   27 Oct 2002; Daniel Robbins <drobbins@gentoo.org> new*: changed "&&" to "||"
   to provide even better protection against mis-use of these commands.
